# instant-messaging-app

./: README.md  main.py  todo
backend/: main.py  pyproject.toml  todo
backend/controllers/: thread_controller.py
backend/models/: message.py  thread.py  user.py
backend/repositories/: message_repository.py
backend/services/: thread_service.py
backend/test/: test_message_repository.py  test_thread_repository.py
backend/utils/: model_utils.py
controllers/: sent_controller.py
frontend/: index.html  package-lock.json  package.json
frontend/models/: message.ts  thread.ts
frontend/services/: thread.service.ts
frontend/src/: App.css  App.tsx
frontend/src/components/message-list/: message-list.tsx
frontend/src/components/threads-card/: thread-card.tsx
models/: message.py  thread.py
repositories/: message_repository.py  thread_repository.py
services/: thread_service.py
test/: test_thread_repository.py
