[tool.poetry]
name = "instant-messaging-app"
version = "0.1.0"
description = ""
authors = ["AKelly404 <harley901@hotmail.com>"]
readme = "README.md"
packages = [{include = "instant_messaging_app"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.7"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

